Added new example

--- a/static_files/index.html
+++ b/static_files/index.html
@@ -10,6 +10,7 @@
         <button onclick="loginOk();">Login with valid credentials</button>
         <button onclick="me();">Get user info</button>
         <button onclick="logout();">Logout</button>
+        <a href="/getFileContent" target="_blank"><button>Get file content</button></a>
     </div>
     <div>Output will be here:</div>
     <pre id="output"></pre>
