Refactoring, update example for latest version

--- a/static_files/index.html
+++ b/static_files/index.html
@@ -11,11 +11,13 @@
         <button onclick="me();">Get user info</button>
         <button onclick="logout();">Logout</button>
         <a href="/getFileContent" target="_blank"><button>Get file content</button></a>
+        <a href="/downloadFile" target="_blank"><button>Download image using api endpoint</button></a>
+        <button onclick="errorEndpoint();">Endpoint with error</button>
+        <button onclick="invalidEndpoint();">Invalid endpoint</button>
     </div>
     <div>Output will be here:</div>
     <pre id="output"></pre>
 
     <script src="./main.js"></script>
-    <script src="./ws.js"></script>
 </body>
 </html>
