Added upload files example

--- a/static_files/index.html
+++ b/static_files/index.html
@@ -14,6 +14,7 @@
         <a href="/downloadFile" target="_blank"><button>Download image using api endpoint</button></a>
         <button onclick="errorEndpoint();">Endpoint with error</button>
         <button onclick="invalidEndpoint();">Invalid endpoint</button>
+        <button onclick="fileInput.click();">Upload files</button>
     </div>
     <div>Output will be here:</div>
     <pre id="output"></pre>
